@@ -1,3 +1,8 @@
+2000-09-01  Christopher James Lahey  <clahey@helixcode.com>
+
+	* providers/imap/camel-imap-utils.c: Removed some unused
+	functions.
+
 2000-08-31  Chris Toshok  <toshok@helixcode.com>
 
 	* providers/nntp/camel-nntp-store.c (camel_nntp_store_class_init):
